<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        style="@style/titleGeneral.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"

        android:text="@string/titleGeneral"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView2"
        style="@style/titleGeneral.titleContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:text="@string/titleContent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        style="@style/ButtonGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonRestore"
        android:text="@string/buttonText"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRestore"
        style="@style/ButtonGeneral.Link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/buttonRestore" />

</RelativeLayout>